# MatrixKernel

./: .gitignore  AUTHORS  NEWS  README  configure.ac
src/: Makefile.am  test.cpp
src/datastructures/: DenseMatrix.cpp  DenseMatrix.h  Matrix.cpp  Matrix.h
src/testing/: DenseMatrixTest.cpp  DenseMatrixTest.h  MyXmlOutputterHook.h  unittest_runner.cpp
